Add --enable-preview argument