@@ -138,8 +138,6 @@
 		<gson-version>2.8.1</gson-version>
 		<gson-fire-version>1.8.3</gson-fire-version>
 		<threetenbp-version>1.3.5</threetenbp-version>
-		<maven.compiler.source>16</maven.compiler.source>
-		<maven.compiler.target>16</maven.compiler.target>
 	</properties>
 	<repositories>
 		<repository>
@@ -480,6 +478,7 @@
 					<compilerArgs>
 						<arg>-XDignore.symbol.file</arg>
 						<arg>-parameters</arg>
+						<arg>--enable-preview</arg>
 					</compilerArgs>
 					<fork>true</fork>
 					<optimize>true</optimize>
